@@ -1,3 +1,8 @@
+2006-11-08  Ville Vainio  <vivainio@gmail.com>
+
+	* completer.py (attr_matches): catch all exceptions raised 
+	by eval of expr with dots.
+
 2006-11-07  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/iplib.py (runsource): Prepend an 'if 1:' to the user
